--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,5 +16,5 @@ jobs:
           ruby-version: 3.3
           bundler-cache: true
 
-      - name: Run rspec
+      - name: Run RSpec
         run: bundle exec rspec
